Fix #246